--- a/JAVA/src/com/view/TradeWindow.form
+++ b/JAVA/src/com/view/TradeWindow.form
@@ -67,13 +67,13 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jScrollPane3" min="-2" pref="195" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jButton7" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Group type="103" alignment="3" groupAlignment="3" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="103" alignment="0" groupAlignment="3" attributes="0">
                               <Component id="jTextField2" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                               <Component id="jComboBox3" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                               <Component id="jButton8" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
                           </Group>
+                          <Component id="jButton7" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace pref="318" max="32767" attributes="0"/>
                   </Group>
