--- a/JAVA/src/com/view/PortfolioManager.form
+++ b/JAVA/src/com/view/PortfolioManager.form
@@ -4,6 +4,9 @@
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
     <Property name="title" type="java.lang.String" value="Portfolio Manager Platform"/>
+    <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+      <Dimension value="[1024, 768]"/>
+    </Property>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -25,6 +28,11 @@
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout"/>
   <SubComponents>
     <Container class="javax.swing.JTabbedPane" name="PMPlatformTabbedPane">
+      <Properties>
+        <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[150, 65]"/>
+        </Property>
+      </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
           <GridBagConstraints gridX="0" gridY="2" gridWidth="2" gridHeight="1" fill="0" ipadX="0" ipadY="127" insetsTop="6" insetsLeft="0" insetsBottom="0" insetsRight="85" anchor="18" weightX="0.0" weightY="0.0"/>
@@ -72,7 +80,7 @@
                           <Component id="FilterOptionsPMPending" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
                           <Component id="PMPendingOrderFilter" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="270" max="32767" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -108,7 +116,7 @@
                         <Column editable="true" title="Order Type" type="java.lang.String"/>
                         <Column editable="true" title="Assigned To" type="java.lang.String"/>
                         <Column editable="true" title="Status" type="java.lang.String"/>
-                        <Column editable="true" title="Currency" type="java.lang.Object"/>
+                        <Column editable="true" title="Stock Exchange" type="java.lang.Object"/>
                       </Table>
                     </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
@@ -235,7 +243,7 @@
                       <Group type="103" groupAlignment="1" attributes="0">
                           <Group type="102" attributes="0">
                               <Component id="FilterTextPMEOD" min="-2" pref="350" max="-2" attributes="0"/>
-                              <EmptySpace pref="26" max="32767" attributes="0"/>
+                              <EmptySpace max="32767" attributes="0"/>
                               <Component id="FilterOptionsPMEOD" min="-2" pref="126" max="-2" attributes="0"/>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Component id="PMEODFilter" min="-2" max="-2" attributes="0"/>
@@ -286,7 +294,7 @@
                           <Component id="FilterOptionsPMEOD" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
                           <Component id="FilterTextPMEOD" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="138" max="32767" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -457,7 +465,7 @@
                       <Component id="PMSendOrderScrollPane" min="-2" pref="113" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="107" max="-2" attributes="0"/>
                       <Component id="PMAddOrderRow" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="211" max="32767" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -472,7 +480,7 @@
               <SubComponents>
                 <Component class="javax.swing.JTable" name="PMSendOrderTable">
                   <Properties>
-                    <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor" postCode="TableColumn col = PMSendOrderTable.getColumnModel().getColumn(9);&#xa;col.setCellEditor(new myComboBoxEditor(TraderNames));&#xa;col.setCellRenderer(new MyComboBoxRenderer(TraderNames));&#xa;TableColumn col2 = PMSendOrderTable.getColumnModel().getColumn(10);&#xa;col2.setCellEditor(new myComboBoxEditor(CurrencyValues));&#xa;col2.setCellRenderer(new MyComboBoxRenderer(CurrencyValues));">
+                    <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor" postCode="TableColumn col = PMSendOrderTable.getColumnModel().getColumn(9);&#xa;col.setCellEditor(new myComboBoxEditor(TraderNames));&#xa;col.setCellRenderer(new MyComboBoxRenderer(TraderNames));&#xa;TableColumn col2 = PMSendOrderTable.getColumnModel().getColumn(10);&#xa;col2.setCellEditor(new myComboBoxEditor(StockExchange));&#xa;col2.setCellRenderer(new MyComboBoxRenderer(StockExchange));">
                       <Table columnCount="11" rowCount="4">
                         <Column editable="true" title="Order ID" type="java.lang.Object"/>
                         <Column editable="true" title="Portfolio ID" type="java.lang.Object"/>
@@ -484,7 +492,7 @@
                         <Column editable="true" title="Account Type" type="java.lang.Object"/>
                         <Column editable="true" title="Order Type" type="java.lang.Object"/>
                         <Column editable="true" title="Assign To" type="java.lang.Object"/>
-                        <Column editable="true" title="Currency" type="java.lang.Object"/>
+                        <Column editable="true" title="Stock Exchange" type="java.lang.Object"/>
                       </Table>
                     </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
@@ -583,7 +591,7 @@
                   <Group type="102" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="PMOrderHistoryScrollPane" pref="801" max="32767" attributes="0"/>
+                          <Component id="PMOrderHistoryScrollPane" max="32767" attributes="0"/>
                           <Group type="102" attributes="0">
                               <Component id="FilterTextPMOrderHistory" min="-2" pref="281" max="-2" attributes="0"/>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -607,7 +615,7 @@
                           <Component id="FilterOptionsPMOrderHistory" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
                           <Component id="PMOrderHistoryFilter" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="0" pref="272" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -642,7 +650,7 @@
                         <Column editable="true" title="Account Type" type="java.lang.String"/>
                         <Column editable="true" title="Order Type" type="java.lang.String"/>
                         <Column editable="true" title="Assigned To" type="java.lang.String"/>
-                        <Column editable="true" title="Currency" type="java.lang.Object"/>
+                        <Column editable="true" title="Stock Exchange" type="java.lang.Object"/>
                       </Table>
                     </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
